--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   </head>
 
   <body>
-    <header>
-      <h1><i>Matt Juntima</i></h1>
-    </header>
+    <body style="background-color:rgb(255,253,200)">
+    <h1><i>Matt Juntima</i></h1> <img src="PictureOfMyself.jpg" width="150" height="250" />
 
-    <img src="PictureOfMyself.jpg" width="150" height="250" />
     <h2>About Me</h2>
     <p>
       Hi, my name is Matt Juntima, and I am a sophomore studying Computer
@@ -22,6 +20,35 @@
       Some languages I am familiar with are Java, Python and C. I am also
       familiar with using Pandas, Jupyter, command line, SQL and MATLAB.
     </p>
+    
+    <h2>Experience</h2>
+
+    <p>Computers have been around all my life and I have always been tinkering with them. I have always been interested in how a computer works and how it interacts
+      with other devices. I was fortunate enought that my highschool had a computer science program and I learned about Java and object orientated programming. It led me 
+      to apply as an engineering major pursing computer science at Virginia Tech. After taking CS classes in high school and college, 
+      I knew I made the right decision. Computer science has endless topics such as cloud, data science, software engineering, etc. The oppertunities and topics you can learn 
+      are endless.
+      The projects were incredibly hard, but the hours of working through and solving problems was rewarding.
+      In college I then increased my repitoire with python and C. </p>
+
+    <p>I value in working smarter not harder as a key value in my life. This values make me competent in the workplace because it allows me to find the always 
+        efficient as possible. I am always looking for the easiest solution. This helps me in my field because in efficiency is key in computer science and in C,
+        memory management is good to know. Having a positive attitude is also a key value in my life. This helps form my interpersonal skills and to
+        communicate with people in the workplace. I hope that I can depeen my knowledge in the computer science field, specificly the data science field of computer science.
+    </p>
+    <h4>Career Objectives:</h4>
+    <ol type="1">
+      <li>To secure a challenging position in a reputable organisation to develop my skills and depeen my knowledge in the field</li>
+      <li>To become a software engineer</li>
+      <li>To maintain a positive attude in the workplace</li>
+
+    <h4>Professional Skills</h4>    
+    <ul>
+      <li>Computer Languages: Java, Python, C</li>
+      <li>Programs: jGRASP, RStudio, Visual Studio, Eclipse, and Thonny</li>
+    <li>Microsoft Office including Microsoft Teams, Excel, PowerPoint, Outlook, and Word</li>
+    <li><a href="MattJuntimaResume2023.pdf">Resume</a></li>
+    </ul>
 
     <h2>Honors and Extracurricular Activities</h2>
     <ul>
@@ -45,7 +72,7 @@
     <h2>Contact</h2>
     <ul>
       <li>Phone: 571-999-4444</li>
-      <li>Email: njuntima@vt.edu</li>
+      <li>Email: <i>njuntima@vt.edu</i></li>
       <li><a href="https://www.linkedin.com/in/matt-juntima/">Linkedin</a></li>
     </ul>
   </body>
